<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.OverviewActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/TextInputLayoutDefault"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:hint="@string/activity_overview_hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:autofillHints="no"
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/llButtons"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                app:elevation="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/btnRegister"
                android:text="@string/activity_overview_register_button_text"
                style="@style/ButtonDefault"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                app:elevation="1dp"
                android:layout_marginTop="5dp"
                android:id="@+id/btnCancel"
                android:text="@string/activity_overview_cancel_button_text"
                style="@style/ButtonDefault"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUsers"
            app:layout_constraintTop_toBottomOf="@id/llButtons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>